fix some overlapping issues and search bar width responsiveness

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,9 +9,6 @@ html, body {
 h1, h2, h3, h4 {
     font-family: 'Pathway Gothic One', sans-serif;
     font-weight: 300;
-}
-
-h1, h2, h3 {
     color: #33CC99;
 }
 
@@ -34,9 +31,15 @@ form {
     margin-bottom: 30px;
 }
 
-.form-inline .form-group input {
-    width: 700px; /* needs media queries */
+.input-group input {
+    width: 100%;
 }
+
+/*
+.form-inline .form-group input {
+    width: 700px;  needs media queries 
+}
+*/
 
 input[type="text"]:focus {
     border-color: rgba(51, 204, 153, 0.8);
@@ -45,22 +48,24 @@ input[type="text"]:focus {
     background-color: rgba(51, 204, 153, 0.1);
 }
 
-.btn-go {
+a.btn {
     background-color: #222;
     color: #ccc;
-    border-color: #33CC99;
-    border-width: 2px;
+    border-right: 2px solid #33CC99;
+    border-bottom: 2px solid #33CC99;
+    border-top: 2px solid #33CC99;
     border-radius: 30px;
     transition: background-color 0.3s;
+    height: 34px;
 }
 
-.btn-go:hover {
+a.btn:hover {
     background-color: rgba(51, 204, 153, 0.2);
     color: #ccc;
     border-color: #33CC99;
 }
 
-.btn-go:active {
+a.btn:active {
     background-color: rgba(51, 204, 153, 0.4) !important;
     color: #ccc !important;
     border-color: #33CC99 !important;
@@ -123,16 +128,23 @@ input[type="text"]:focus {
 
 
 
+
 /* QUERIES */
-@media (max-width: 768px) {
-    .form-inline .form-group input {
-        width: 100%;
-        margin: 0 auto;
+@media (max-width: 375px) {
+    .col-xs-3 {
+        width: 110px;
     }
-    .btn-go {
-        display: block;
-        width: 100%;
-        margin: 10px auto;
+    .col-xs-9 {
+        width: 260px;
     }
-    
+}
+
+
+@media (max-width: 320px) {
+    .col-xs-3 {
+        width: 110px;
+    }
+    .col-xs-9 {
+        width: 200px;
+    }
 }
